--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,28 +1,52 @@
-name: CI
+# .github/workflows/deploy.yml
+name: Deploy to GitHub Pages
+
 on:
   push:
-    branches:
-    - master
+    branches: [main, master]
+  workflow_dispatch:
 
-  schedule:
-    - cron: "0 0 * * *"
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
-  CI:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
-
     steps:
-    - uses: actions/checkout@v4
-    - uses: denoland/setup-deno@v2
-      with:
-        deno-version: v2.x
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - run: deno task build --blogroll
+      - name: Setup Deno
+        uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.x
 
-    - uses: actions/upload-pages-artifact@v3
-      with:
-        path: ./out/www
-    - uses: actions/deploy-pages@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+
+      - name: Build site
+        run: deno task build
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: './_site'
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
