--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,5 +37,5 @@ jobs:
         uses: denoland/deployctl@v1
         with:
           project: "vietnguyen"
-          entrypoint: "server.js"
+          entrypoint: "./server.js"
           root: "./out/www"
