--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -6,7 +6,7 @@
 # This workflow will install Deno then run `deno lint` and `deno test`.
 # For more information see: https://github.com/denoland/setup-deno
 
-name: Deno
+name: Deno CI/CD
 
 on:
   push:
@@ -16,6 +16,7 @@ on:
 
 permissions:
   contents: read
+  id-token: write # Needed for Deno Deploy
 
 jobs:
   test:
@@ -26,36 +27,25 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Deno
-        # uses: denoland/setup-deno@v1
-        uses: denoland/setup-deno@61fe2df320078202e33d7d5ad347e7dcfa0e8f31  # v1.1.2
-        with:
-          deno-version: v1.x
-
-      # Uncomment this step to verify the use of 'deno fmt' on each commit.
-      # - name: Verify formatting
-      #   run: deno fmt --check
-
-      - name: Run linter
-        run: deno lint
-
-      - name: Run tests
-        run: deno test -A
-  deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
-
-    steps:
-      - name: Clone repository
-        uses: actions/checkout@v3
-
-      - name: Install Deno
         uses: denoland/setup-deno@v1
         with:
-          deno-version: 2.2.4
+          deno-version: 2.2.4 # Match your local version
 
+      # Optional: Format check if you want to enforce formatting
+      - name: Verify formatting
+        run: deno fmt --check
+        continue-on-error: true # Optional: won't fail the workflow if format check fails
+
+      # Optional: Lint check (only if you have Deno lint rules set up)
+      - name: Run linter
+        run: deno lint
+        continue-on-error: true # Optional: won't fail the workflow if lint check fails
+
+      # Build the site
+      - name: Build site
+        run: deno task build
+
+      # Cache dependencies
       - name: Cache dependencies
         uses: actions/cache@v3
         with:
@@ -63,15 +53,41 @@ jobs:
           key: ${{ runner.os }}-deno-${{ hashFiles('deno.lock') }}
           restore-keys: ${{ runner.os }}-deno-
 
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    # Only deploy on push to master, not on PRs
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+
+    steps:
+      - name: Setup repo
+        uses: actions/checkout@v4
+
+      - name: Setup Deno
+        uses: denoland/setup-deno@v1
+        with:
+          deno-version: 2.2.4 # Match your local version
+
+      # Cache dependencies
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.deno
+          key: ${{ runner.os }}-deno-${{ hashFiles('deno.lock') }}
+          restore-keys: ${{ runner.os }}-deno-
+
+      # Build the site
       - name: Build site
         run: deno task build
 
+      # Copy server.js to output directory
       - name: Copy server.js to output directory
         run: cp server.js ./out/www/
 
-      - name: Upload to Deno Deploy
+      # Deploy to Deno Deploy
+      - name: Deploy to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: "vietnguyen"
+          project: "vietnguyen" # Your Deno Deploy project name
           entrypoint: "server.js"
           root: "./out/www"
