--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           deno-version: v2.x
 
       - name: Build step
-        run: "task build --blogroll"
+        run: "deno task build --blogroll"
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
@@ -32,5 +32,5 @@ jobs:
           project: "vietnguyen"
           entrypoint: "server.js"
           root: ""
-          
+
           
