--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
 name: Deploy
 on:
   push:
-    branches: master
+    branches: [master]
   pull_request:
-    branches: master
+    branches: [master]
 
 jobs:
   deploy:
@@ -15,22 +15,15 @@ jobs:
       contents: read # Needed to clone the repository
 
     steps:
-      - name: Clone repository
-        uses: actions/checkout@v4
+    - uses: actions/checkout@v4
+    - uses: denoland/setup-deno@v2
+      with:
+        deno-version: v2.x
 
-      - name: Install Deno
-        uses: denoland/setup-deno@v2
-        with:
-          deno-version: v2.x
+    - run: deno task build --blogroll
 
-      - name: Build step
-        run: "deno task build"
-
-      - name: Upload to Deno Deploy
-        uses: denoland/deployctl@v1
-        with:
-          project: "vietnguyen"
-          entrypoint: "server.js"
-          root: ""
-
-          
+    - uses: actions/upload-pages-artifact@v3
+      with:
+        path: ./out/www
+        project: "vietnguyen"
+        entrypoint: "server.js"
