--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,4 +23,7 @@ jobs:
     - uses: actions/upload-pages-artifact@v3
       with:
         path: ./out/www
+        root: "."
+        entrypoint: "server.js"
+        
     - uses: actions/deploy-pages@v4
